25 and enable preview in surfire